platform/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-80
        protocol: HTTP
      hosts:
        - "*"
    #   tls:
    #     httpsRedirect: true
    # - port:
    #     number: 443
    #     name: https-443
    #     protocol: HTTPS
    #   hosts:
    #     - "*"
    #   tls:
    #     mode: SIMPLE
    #     credentialName: gateway-tls
