platform/istio/frontend-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - "*"
  gateways:
    - istio-ingress/istio-gateway
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
    match:
        - uri:
            prefix: /
